[package]
name = "diffbotgraph"
version = "0.1.0"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
charts = { path = "../rustplotlib" }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
